# FilmFriend

./: Cargo.toml
src/: main.rs
src/backend/: database.rs  mod.rs  utils.rs
src/backend/models/: mod.rs  movie.rs  server_key.rs
src/commands/: generate.rs  help.rs  mod.rs  movies.rs  ping.rs  poll.rs  submit.rs
src/event_handler/: handler.rs  mod.rs
src/event_handler/events/: interaction_create.rs  mod.rs  ready.rs
src/event_handler/events/interactions/: application_command.rs  mod.rs  modal_submit.rs
src/handlers/: interaction_create.rs  ready.rs
