[package]
name = "film_friend"
description = "rust discord bot for movie nights"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
dotenv = "0.15.0"
mongodb = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
regex = "1.7.0"